# hermes-core

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  circle.yml  hermes.dot
.circleci/: circle.yml
docs/examples/client/: create_document.py  update_document.py
docs/examples/go/: config.conf  hermes_client.go
docs/examples/python/: config.json  hermes_client.py  pyhermes_example.py
docs/examples/test_keys/: dXNlcjE=  dXNlcjI=
examples/db/file_db/: hermes_access_key_store.c  hermes_credential_store.c  hermes_record_set_store.c
examples/db/python/: pyhermes.py
examples/python/: pyhermes.py  pyhermes_example.py
gohermes/: credential_store.go  datastore.go  keystore.go  keystore_test_template.go  mid_hermes.go  transport.c  transport.go  transport.h  transport_test.go  utils.go  utils_test.go  utils_test_cgo.go
gohermes/core/: block.go  block_test.go  buffer.go  buffer_test.go  errors.go  hc_core.h  token.go  token_test.go  user.go  user_test.go
gohermes/midhermes/local/: credential_store.c  credential_store.go  credential_store.h  data_store.c  data_store.go  data_store.h  key_store.c  key_store.go  key_store.h  local_mid_hermes.go  local_mid_hermes_test.go
gohermes/midhermes/rpc/: rpc_midhermes.go  transport.c  transport.go  transport_test.go
gohermes/test/: test.go
include/hermes/: access_manager_service.h  buffer.h  config.h  connection_manager.h  credential_store.h  credential_store_protocol.h  credential_store_service.h  crypt.h  db.h  docs_db_interface.h  functions_collection.h  hermes_access_key_store.h  hermes_client.h  hermes_credential_store.h  hermes_documant_block.h  hermes_document.h  hermes_document_block.h  hermes_document_blocks_list.h  hermes_record_set_store.h  hermes_storages.h  hermes_user.h  ini.h  key_db_interface.h  key_service.h  key_service_protocol.h  map.h  mid_hermes.h  protocols.h  record_set.h  record_set_protocol.h  record_set_service.h  secure_connection_manager.h  service.h  srpc.h  stubs_generator.h  thread_pool.h  users_db_interface.h  utils.h
include/hermes/client_interfaces/: keys_storage_interface.h
include/hermes/common/: buffer.h  crypt.h  errors.h  hash_table.h  mem_cmp.h  utils.h
include/hermes/credential_store/: client.h  db.h  server.h  service.h
include/hermes/data_store/: client.h  db.h  server.h  service.h
include/hermes/interfaces/: key_db_interface.h
include/hermes/key_store/: client.h  db.h  server.h  service.h
include/hermes/mid_hermes/: mid_hermes.h  mid_hermes_ll.h  mid_hermes_ll_block.h  mid_hermes_ll_buffer.h  mid_hermes_ll_rights_list.h  mid_hermes_ll_token.h  mid_hermes_ll_user.h
include/hermes/mid_hermes_ll/: mid_hermes_ll.h  mid_hermes_ll_block.h  mid_hermes_ll_buffer.h  mid_hermes_ll_rights_list.h  mid_hermes_ll_token.h  mid_hermes_ll_user.h
include/hermes/rpc/: buffers_list.h  client.h  param_pack.h  server.h  transport.h
pyhermes/: MANIFEST.in  hermes_client.py  py_midhermes.c  py_midhermes.h  py_secure_transport.c  py_secure_transport.h  py_transport.c  py_transport.h  py_transport_wrapper.c  py_transport_wrapper.h  pyhermes.c  secure_transport.c  setup.py  test.py  tox.ini  transport.c  transport.h
simple_demo/client/: keys_local_store.c  simple_file_keys_store.c
simple_demo/lowlevel/: Makefile  commands.c  commands.h  credential_store.c  credential_store.h  data_store.c  data_store.h  key_store.c  key_store.h  main.c  utils.c
src/common/: buffer.c  common.mk  frame.c  frame.h  hbuffer.c  hbuffer.h  hm_hash_table.c  mem_cmp.c
src/common/crypter/: a.out  crypt_fork.c  (+7 more)
src/credential_store/: client.c  credential_store.mk  functions.c  functions.h  server.c  service.c
src/data_store/: client.c  data_store.mk  functions.c  functions.h  server.c  service.c
src/file_db/: hermes_credential_store.c
src/key_store/: client.c  functions.c  functions.h  key_store.mk  server.c  service.c
src/mid_hermes/: credential_store.c  credential_store_impl.c  credential_store_impl.h  crypt.c  data_store_impl.c  data_store_impl.h  hermes.c  hermes_client.c  hermes_documen_blocks_list.c  hermes_document.c  hermes_document_block.c  hermes_storages.c  hermes_user.c  key_store_impl.c  key_store_impl.h  midHermes.mk  mid_hermes.c  mid_hermes.mk  mid_hermes_ll_block.c  mid_hermes_ll_buffer.c  mid_hermes_ll_rights_list.c  mid_hermes_ll_token.c  mid_hermes_ll_user.c  mid_hermes_ll_utils.c  mid_hermes_ll_utils.h  record_set.c  utils.c  utils.h
src/mid_hermes_ll/: mid_hermes_ll.mk  mid_hermes_ll_block.c  mid_hermes_ll_buffer.c  mid_hermes_ll_rights_list.c  mid_hermes_ll_token.c  mid_hermes_ll_user.c  utils.c  utils.h
src/protocols/: credential_store.c  credential_store_stubs.c  key_service.c  key_service_stubs.c  protocols.mk  record_set.c  record_set_stubs.c
src/rpc/: buffers_list.c  client.c  param_pack.c  param_pack.h  param_pack_test.c  rpc.mk  server.c
src/secure_transport/: secure_transport.mk  session_callback.c  transport.c  utils.c  utils.h
src/services/: credential_store_service.c  key_service.c  record_set_service.c  service.h  services.mk
src/srpc/: connection_manager.c  functions_collection.c  secure_connection_manager.c  srpc.c  srpc.mk  thread_pool.c
tests/: client_test.c  crypt_test.c  cs_test_db  test.mk  user1_private_key  user2_private_key  user_key_pair_generator.c  user_test.c
tests/common/: common.c  common.h  sput.h  test_credential_store_db.c  test_credential_store_db.h  test_data_store_db.c  test_data_store_db.h  test_key_store_db.c  test_key_store_db.h  test_transport.c  test_transport.h  test_utils.c  test_utils.h
tests/credential_store/: credential_store.mk  credential_store_tests.c
tests/data_store/: data_store.mk  data_store_tests.c
tests/db/: docs_db.h  keys_db.h  users_db.c  users_db.h
tests/key_store/: key_store.mk  key_store_tests.c
tests/mid_hermes/: mid_hermes.c  mid_hermes.mk
tests/mid_hermes_ll/: block_tests.c  block_tests.h  main.c  mid_hermes_ll.mk
tests/rpc/: param_pack_test.c  rpc.mk  rpc_test.c  server_test.c  test_transport.c  test_transport.h
tests/scripts/: test_services.sh
(+79 files in other folders)
